client/src/App.css
.App {
  text-align: center;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

main {
  flex-grow: 1;
  display: flex;
  /* align-items: stretch; */
  justify-content: space-around;
  min-width: 100vw;
}

.game-container {
  margin: 10px;
}
.game-board {
  /* margin: 10px; */
  display: grid;
  grid-template-columns: repeat(25, 1fr);
  grid-template-rows: repeat(25, 1fr);
}
.game-board div {
  border: 1px solid black;
  padding: 0;
  margin: 0;
  height: 2em;
  width: 2em;
}
.game-board div:hover {
  background: rgba(125,12,54,.3);
}
.players {
  background: purple;
  flex-grow: 1;
  padding: 0;
  margin: 0;
}
footer header {
  margin: 0;

}
.side {
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

